# blender-data-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: BLENDER_TUTORIAL.md  MULTI_FIELD_ROADMAP.txt  NUMPY_FORMAT.md  USER_MANUAL.md
examples/carrier_wave/: carrier_0001.npz  carrier_0002.npz  carrier_0003.npz  carrier_0004.npz  carrier_0005.npz  carrier_0006.npz  carrier_0007.npz  carrier_0008.npz  carrier_0009.npz  carrier_0010.npz  carrier_0011.npz  carrier_0012.npz  carrier_0013.npz  carrier_0014.npz  carrier_0015.npz  carrier_0016.npz  carrier_0017.npz  carrier_0018.npz  carrier_0019.npz  carrier_0020.npz  config.yaml
examples/gaussian/: config.yaml  gaussian_0001.npz
scripts/: bootstrap_linux.sh  build_scene.py  check_scene.py  render_smoke.py  write_vdb.py
src/blender_data_pipeline/: __init__.py  cli.py  config.py  data.py  processing.py
tests/: test_config.py  test_data.py  test_processing.py  test_vdb_integration.py
